--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 moc_*.cpp
 qrc_*.cpp
 Makefile
+*.user
 *-build-*
 *.pbxproj
 *.plist
@@ -24,6 +25,7 @@ Makefile
 *.build
 *.xcodeproj
 *.app
+*.dmg
 build-*
 *.autosave
 Debug*
