--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "deps/qjsonrpc"]
-	path = deps/qjsonrpc
+[submodule "project/qjsonrpc"]
+	path = project/qjsonrpc
 	url = https://bitbucket.org/devonit/qjsonrpc
