Added QR Codes, plus other improvements to Nym dlg
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "project/qjsonrpc"]
 	path = project/qjsonrpc
 	url = https://bitbucket.org/devonit/qjsonrpc
+[submodule "project/QtQREncoder"]
+	path = project/QtQREncoder
+	url = https://github.com/Open-Transactions/QtQREncoder.git
